Minor fixes for new login page * Default for login box is center * Increased bottom toolbar height to 40px * Center text in bottom toolbar * Show the loginbox on mobiles more desktop'ish

--- a/ui/apps/themes/login/login.less
+++ b/ui/apps/themes/login/login.less
@@ -385,7 +385,7 @@ html.baseline {
         display: flex;
         align-items: center;
         flex-wrap: wrap;
-        min-height: 32px;
+        min-height: 40px;
         padding: 2px 4px;
 
         > * {
@@ -401,7 +401,7 @@ html.baseline {
         }
 
         .composition-element {
-            margin-top: 5px;
+            //margin-top: 5px;
         }
     }
 
@@ -533,7 +533,6 @@ html.baseline {
 
             #io-ox-login-box {
                 padding: 0;
-                height: 100%;
 
                 .row {
                     width: 100%;
@@ -544,17 +543,16 @@ html.baseline {
 
                     #box-form {
                         padding: 0;
-                        width: 100%;
                         max-width: unset;
-                        height: 100%;
-                        box-shadow: none;
+                        margin: 0 auto;
+                        width: 320px;
 
                         #box-form-header {
                             display: none;
                         }
 
                         #box-form-body {
-                            border-radius: unset;
+                            border-radius: 6px;
                             min-height: unset;
                             height: 100%;
 
@@ -603,7 +601,6 @@ html.baseline {
 
             #io-ox-languages {
                 margin: 0;
-                margin-bottom: -2px;
 
                 .lang-label {
                     margin-bottom: 0;
